--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="container">
 <h1>Create a new group</h1>
   <div class="row">
@@ -11,6 +9,11 @@
                 <%= f.label :name %>
             </div>
 
+            <div class="field form-outline mt-4 mb-4">
+                <%= f.text_field :emails, autocomplete: "emails", :class => 'form-control' %>
+                <%= f.label :emails %>
+            </div>
+
             <div class="actions">
                 <%= f.submit "Submit", :class => 'btn btn-primary btn-block mb-4' %>
             </div>
@@ -19,4 +22,3 @@
   </div>
 
 </div>
-
